story #8956 - adaptation de la partie template de convention avec la nouvelle logique d'association