@@ -4,13 +4,13 @@ import jakarta.persistence.EntityManager;
 import org.esup_portail.esup_stage.model.TemplateConvention;
 import org.springframework.stereotype.Repository;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Repository
 public class TemplateConventionRepository extends PaginationRepository<TemplateConvention> {
 
     public TemplateConventionRepository(EntityManager em) {
         super(em, TemplateConvention.class, "tc");
-        this.predicateWhitelist = Arrays.asList("typeConvention.libelle", "langueConvention.code");
+        this.predicateWhitelist = List.of("langueConvention.code","libelle");
     }
 }
